ticket1/registry-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
        - image: registry:2
          name: registry
          ports:
            - containerPort: 5000
              name: http
          volumeMounts:
            - mountPath: /var/lib/registry
              name: image-store
      volumes:
      - name: image-store
        persistentVolumeClaim:        # persistent volume so images are not 
          claimName: registry-pvc
